-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b33
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8237557 | 15 | Sangheon Kim | P2 | Resolved | Fixed | b07 |
| JDK-8237713 | 14.0.2 | Sangheon Kim | P2 | Resolved | Fixed | master |
| JDK-8238142 | 14.0.1 | Unassigned | P2 | Resolved | Fixed | b02 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/601ba65f-769d-4a91-8a1e-d3fc5817582d-S316/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dce0d772-5ab1-47ac-8170-ae4b92aff2eb/runs/df91908a-6a78-4299-8c2a-825ec7910878/workspace/open/src/hotspot/share/classfile/javaClasses.cpp:3993), pid=53186, tid=19715
# assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop
#
# JRE version: Java(TM) SE Runtime Environment (14.0+24) (fastdebug build 14-ea+24-1057)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+24-1057, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
Current thread (0x00007fbd5601c800): ConcurrentGCThread "G1 Conc#0" [stack: 0x00007000095ad000,0x00007000096ad000] [id=19715]
Stack: [0x00007000095ad000,0x00007000096ad000], sp=0x00007000096ac870, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xbadf83] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xbae69f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x3aa888] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x5c2acc] java_lang_ClassLoader::loader_data_raw(oop)+0x86
V [libjvm.dylib+0x49d5a5] void InstanceClassLoaderKlass::oop_oop_iterate<unsigned int, G1RootRegionScanClosure>(oop, G1RootRegionScanClosure*)+0x18b
V [libjvm.dylib+0x49d3aa] void OopOopIterateDispatch<G1RootRegionScanClosure>::Table::oop_oop_iterate<InstanceClassLoaderKlass, unsigned int>(G1RootRegionScanClosure*, oop, Klass*)+0x3c
V [libjvm.dylib+0x49b167] void OopIteratorClosureDispatch::oop_oop_iterate<G1RootRegionScanClosure>(G1RootRegionScanClosure*, oop, Klass*)+0x4f
V [libjvm.dylib+0x49296c] int oopDesc::oop_iterate_size<G1RootRegionScanClosure>(G1RootRegionScanClosure*)+0xcc
V [libjvm.dylib+0x4925f5] G1ConcurrentMark::scan_root_region(MemRegion const*, unsigned int)+0x14b
V [libjvm.dylib+0x4980f6] G1CMRootRegionScanTask::work(unsigned int)+0xc8
V [libjvm.dylib+0xc068e2] GangWorker::run_task(WorkData)+0x60
V [libjvm.dylib+0xc0698b] GangWorker::loop()+0x25
V [libjvm.dylib+0xb21fd9] Thread::call_run()+0x11b
V [libjvm.dylib+0x99af0b] thread_native_entry(Thread*)+0x131
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/601ba65f-769d-4a91-8a1e-d3fc5817582d-S316/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dce0d772-5ab1-47ac-8170-ae4b92aff2eb/runs/df91908a-6a78-4299-8c2a-825ec7910878/workspace/open/src/hotspot/share/classfile/javaClasses.cpp:3993), pid=53186, tid=19715
# assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop
#
# JRE version: Java(TM) SE Runtime Environment (14.0+24) (fastdebug build 14-ea+24-1057)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+24-1057, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
Current thread (0x00007fbd5601c800): ConcurrentGCThread "G1 Conc#0" [stack: 0x00007000095ad000,0x00007000096ad000] [id=19715]
Stack: [0x00007000095ad000,0x00007000096ad000], sp=0x00007000096ac870, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xbadf83] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xbae69f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x3aa888] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x5c2acc] java_lang_ClassLoader::loader_data_raw(oop)+0x86
V [libjvm.dylib+0x49d5a5] void InstanceClassLoaderKlass::oop_oop_iterate<unsigned int, G1RootRegionScanClosure>(oop, G1RootRegionScanClosure*)+0x18b
V [libjvm.dylib+0x49d3aa] void OopOopIterateDispatch<G1RootRegionScanClosure>::Table::oop_oop_iterate<InstanceClassLoaderKlass, unsigned int>(G1RootRegionScanClosure*, oop, Klass*)+0x3c
V [libjvm.dylib+0x49b167] void OopIteratorClosureDispatch::oop_oop_iterate<G1RootRegionScanClosure>(G1RootRegionScanClosure*, oop, Klass*)+0x4f
V [libjvm.dylib+0x49296c] int oopDesc::oop_iterate_size<G1RootRegionScanClosure>(G1RootRegionScanClosure*)+0xcc
V [libjvm.dylib+0x4925f5] G1ConcurrentMark::scan_root_region(MemRegion const*, unsigned int)+0x14b
V [libjvm.dylib+0x4980f6] G1CMRootRegionScanTask::work(unsigned int)+0xc8
V [libjvm.dylib+0xc068e2] GangWorker::run_task(WorkData)+0x60
V [libjvm.dylib+0xc0698b] GangWorker::loop()+0x25
V [libjvm.dylib+0xb21fd9] Thread::call_run()+0x11b
V [libjvm.dylib+0x99af0b] thread_native_entry(Thread*)+0x131
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
- backported by
-
JDK-8237557 assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop
-
- Resolved
-
-
JDK-8237713 assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop
-
- Resolved
-
-
JDK-8238142 assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop
-
- Resolved
-