8234173: assert(loader != __null && oopDesc::is_oop(loader)) failed: loader must be oop

Reviewed-by: kbarrett, egahlin, tschatzl